# sales-management

./: .gitignore  .gitleaks.toml  .spectral.yaml  AGENTS.md  LESSONS.md  LICENSE  README.md  docker-compose.harness.yml  glossary.yaml  prd.md  renovate.json  sgconfig.yml
.ci/: format-request  nightly-request  visual-baseline-request
.claude/: settings.json
.github/: CODEOWNERS
.harness/: README.md  lessons.md  master.py
.ralph/: capture-baseline.sh  task-prompt.tmpl.md  tasks.toml
docs/: ai-review-external-worker-improvement-plan.md  frontend-component-page-test-plan.md  frontend-zustand-removal-plan.md  mutation-testing-adoption-plan.md  pbt-fscheck-improvement-proposal.md  (+8 more)
tools/dsl-parser/: README.md  ci.sh  pyproject.toml
tools/dsl-parser/src/dsl_parser/: __init__.py  cli.py  linter.py  parser.py  spec.py
tools/dsl-parser/tests/: test_domain_model.py  test_golden.py  test_linter.py  test_spec.py
tools/dsl-parser/tests/golden/01-single-decl/: expected.json  input.dsl
tools/dsl-parser/tests/golden/02-multiple-decls/: expected.json  input.dsl
tools/dsl-parser/tests/golden/03-and-product/: expected.json  input.dsl
tools/dsl-parser/tests/golden/04-or-sum/: expected.json  input.dsl
tools/dsl-parser/tests/golden/05-optional/: expected.json  input.dsl
tools/dsl-parser/tests/golden/06-list/: expected.json  input.dsl
tools/dsl-parser/tests/golden/07-precedence/: expected.json  input.dsl
tools/dsl-parser/tests/golden/08-behavior/: expected.json  input.dsl
tools/dsl-parser/tests/spec_golden/01-normalized-spec/: expected.json  input.dsl
(+462 files in other folders)
