[project]
name = "dsl-parser"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" }
]
requires-python = ">=3.11"
dependencies = [
    "parsimonious>=0.11.0",
]

[project.scripts]
dsl-parser = "dsl_parser:main"
dsl-spec-lint = "dsl_parser.linter:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
